lintian (2.5.10.4) unstable; urgency=low

  * lib/Lintian/Collect/Package.pm:
    + [NT] Ensure the "root" entry of indices do not contain itself.
      (Closes: #695866)

 -- Niels Thykier <niels@thykier.net>  Sat, 13 Feb 2013 12:50:00 +0100

lintian (2.5.10.3) unstable; urgency=low

  * checks/scripts{,.desc}:
    + [NT] Fix false-positive for removal of device files as /dev/shm
      is not a device.  Thanks to Steve Langasek for the report and
      Roger Leigh for the extra info.  (Closes: #693442)
  * checks/standards-version:
    + [NT] Recognise Standards-Version 3.9.4.
    + [NT] Accept Standards-Version 3.9.3 as current (enough) during
      the freeze.

 -- Niels Thykier <niels@thykier.net>  Tue, 11 Dec 2012 20:14:06 +0100

lintian (2.5.10.2) unstable; urgency=low

  * checks/po-debconf:
    + [NT] Fix dirhandle leak.
  * checks/source-copyright{,.desc}:
    + [NT] Report the correct line number for the use of commas in
      the "Files" field in DEP-5 copyright files.  Thanks to Faheem
      Mitha for the report.  (Closes: #683946)
    + [NT] Mention that syntax-error-in-dep5-copyright may hide
      other issues as Lintian skips some DEP-5 checks in this case.
      Thanks to Faheem Mitha for the report.

  * frontend/lintian:
    + [NT] Fix typo of identifier method, which causes Lintian to
      crash in case a "coll" cannot be started or it fails.

  * lib/Lintian/Profile.pm:
    + [NT] Use "closedir" rather than "close" to close a dir
      handle.

 -- Niels Thykier <niels@thykier.net>  Mon, 17 Sep 2012 11:56:18 +0200

lintian (2.5.10.1) unstable; urgency=low

  * checks/fields.desc:
    + [NT] Mention that cme can automate fixing some perl
      related tags.  Thanks to gregor herrmann for the report
      and patch.  (Closes: #680446)
  * checks/manpages:
    + [NT] Ignore wrapping issues on lines containing "file://" as
      those are probably also URLs.  Thanks to Faheem Mitha for the
      report.  (Closes: #682701)
